--- a/index.html
+++ b/index.html
@@ -5,391 +5,309 @@
 <title>Tax Owing Tracker</title>
 
 <style>
-:root{
- --bg:#0e0e0e;
- --panel:#161616;
- --panel-dark:#111;
- --border:#2a2a2a;
- --text:#f5f5f5;
- --muted:#9a9a9a;
- --accent:linear-gradient(90deg,#ff5f57,#ffb347);
-}
-*{box-sizing:border-box;}
-body{
- margin:0;
- height:100vh;
- display:flex;
- align-items:center;
- justify-content:center;
- background:var(--bg);
- color:var(--text);
- font-family:system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
-}
-.app{
- width:420px;
- background:var(--panel);
- padding:24px;
- border-radius:16px;
- box-shadow:0 0 40px rgba(0,0,0,.6);
- max-height:90vh;
- overflow-y:auto;
-}
-h1{font-size:18px;margin:0 0 12px 0;}
-
-.fy-row{
- display:flex;
- justify-content:space-between;
- align-items:center;
- margin-bottom:14px;
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    background: #0e0e0e;
+    color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
 }
 
-.fy-controls{
- display:flex;
- gap:8px;
- font-size:12px;
- opacity:.8;
+.app {
+    width: 420px;
+    background: #161616;
+    padding: 24px;
+    border-radius: 14px;
+    box-shadow: 0 0 40px rgba(0,0,0,0.6);
+    max-height: 90vh;
+    overflow-y: auto;
 }
 
-.numbers{
- display:flex;
- justify-content:space-between;
- margin-bottom:10px;
+h1 {
+    font-size: 18px;
+    margin-bottom: 4px;
+    font-weight: 600;
+    opacity: 0.9;
 }
 
-.threshold{
- font-size:13px;
- opacity:.7;
+.fy-row {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 12px;
+    opacity: 0.7;
+    margin-bottom: 12px;
 }
 
-.totals{
- display:flex;
- flex-direction:column;
- align-items:flex-end;
+.fy-arrow {
+    cursor: pointer;
+    opacity: 0.6;
+    user-select: none;
 }
 
-#incomeDisplay{font-size:15px;}
-#taxEstimate{font-size:11px;color:var(--muted);}
+.fy-arrow:hover { opacity: 1; }
 
-.bar-container{
- height:10px;
- background:var(--border);
- border-radius:999px;
- overflow:hidden;
- margin-bottom:18px;
+.fy-arrow.disabled {
+    opacity: 0.25;
+    pointer-events: none;
 }
 
-.bar-fill{
- height:100%;
- width:0;
- background:var(--accent);
- transition:width .25s ease;
+.numbers {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    opacity: 0.85;
+    margin-bottom: 10px;
 }
 
-.controls{
- display:grid;
- grid-template-columns:1fr 1fr;
- gap:8px;
- margin-bottom:16px;
+.bar-container {
+    height: 10px;
+    background: #2a2a2a;
+    border-radius: 999px;
+    overflow: hidden;
+    margin-bottom: 18px;
 }
 
-input,button{
- background:#0f0f0f;
- border:1px solid #333;
- color:var(--text);
- padding:8px;
- border-radius:6px;
- font-size:13px;
+.bar-fill {
+    height: 100%;
+    width: 0%;
+    background: linear-gradient(90deg, #ff5f57, #ffb347);
+    transition: width 0.25s ease;
 }
 
-button{cursor:pointer;}
-button:hover{background:#222;}
-
-.section{margin-bottom:14px;}
-.section h2{
- display:flex;
- justify-content:space-between;
- font-size:13px;
- margin:0 0 6px 0;
- opacity:.7;
+.controls {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 8px;
+    margin-bottom: 16px;
 }
 
-.log-item{
- background:var(--panel-dark);
- padding:6px 8px;
- border-radius:6px;
- margin-bottom:6px;
- font-size:13px;
+input, button {
+    background: #0f0f0f;
+    border: 1px solid #333;
+    color: #fff;
+    padding: 8px;
+    border-radius: 6px;
+    font-size: 13px;
 }
 
-.log-top{
- display:flex;
- justify-content:space-between;
+button {
+    cursor: pointer;
 }
 
-.desc{
- font-size:12px;
- opacity:.6;
- margin-top:2px;
+button:hover {
+    background: #2a2a2a;
 }
 
-.delete{
- color:#ff5f57;
- cursor:pointer;
- font-size:12px;
+.section {
+    margin-bottom: 14px;
 }
 
-.hidden{display:none!important;}
-.nav{margin-bottom:12px;}
+.section h2 {
+    font-size: 13px;
+    opacity: 0.7;
+    margin-bottom: 6px;
+}
+
+.log-item {
+    background: #111;
+    padding: 6px 8px;
+    border-radius: 6px;
+    margin-bottom: 6px;
+    font-size: 13px;
+}
+
+.log-top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.desc {
+    font-size: 12px;
+    opacity: 0.7;
+    margin-top: 2px;
+}
 </style>
 </head>
+
 <body>
 
 <div class="app">
 
-<div id="screen-main">
 <h1>Tax Owing Tracker</h1>
 
 <div class="fy-row">
-  <div class="fy-controls">
-    <button onclick="changeFY(-1)">←</button>
-    <span id="fyText"></span>
-    <button onclick="changeFY(1)">→</button>
-  </div>
-  <button onclick="resetFY()" style="font-size:11px;opacity:.6">Reset FY</button>
+    <span class="fy-arrow" onclick="prevFY()">←</span>
+    <span id="fyLabel">Financial Year</span>
+    <span class="fy-arrow" id="nextArrow" onclick="nextFY()">→</span>
 </div>
 
 <div class="numbers">
-  <div class="threshold">$18,200</div>
-  <div class="totals">
+    <div>$18,200</div>
     <div id="incomeDisplay">$0</div>
-    <div id="taxEstimate"></div>
-  </div>
 </div>
 
 <div class="bar-container">
-  <div class="bar-fill" id="barFill"></div>
+    <div class="bar-fill" id="barFill"></div>
 </div>
 
 <div class="controls">
-  <input id="amountInput" type="number" placeholder="Amount $" />
-  <input id="descInput" type="text" placeholder="Description" />
-  <button onclick="addIncome()">Add Income</button>
-  <button onclick="addDeduction()">Add Deduction</button>
+    <input id="amountInput" type="number" placeholder="Amount $" />
+    <input id="descInput" type="text" placeholder="Description" />
+    <button onclick="addIncome()">Add Income</button>
+    <button onclick="addDeduction()">Add Deduction</button>
 </div>
 
 <div class="section">
-  <h2>Income <button onclick="showIncome()">View all</button></h2>
-  <div id="incomePreview"></div>
+    <h2>Income</h2>
+    <div id="incomePreview"></div>
 </div>
 
 <div class="section">
-  <h2>Deductions <button onclick="showDeductions()">View all</button></h2>
-  <div id="deductionPreview"></div>
-</div>
-</div>
-
-<div id="screen-income" class="hidden">
-<div class="nav"><button onclick="showMain()">← Back</button></div>
-<h1>Income Log</h1>
-<div id="incomeLog"></div>
-</div>
-
-<div id="screen-deduction" class="hidden">
-<div class="nav"><button onclick="showMain()">← Back</button></div>
-<h1>Deduction Log</h1>
-<div id="deductionLog"></div>
+    <h2>Deductions</h2>
+    <div id="deductionPreview"></div>
 </div>
 
 </div>
 
 <script>
-
-/* ---------- Progressive Tax ---------- */
-function calculateTax(income){
- let tax = 0;
-
- if(income <= 18200) return 0;
-
- if(income <= 45000){
-   tax = (income - 18200) * 0.19;
- }
- else if(income <= 120000){
-   tax = (45000 - 18200) * 0.19
-       + (income - 45000) * 0.325;
- }
- else if(income <= 180000){
-   tax = (45000 - 18200) * 0.19
-       + (120000 - 45000) * 0.325
-       + (income - 120000) * 0.37;
- }
- else{
-   tax = (45000 - 18200) * 0.19
-       + (120000 - 45000) * 0.325
-       + (180000 - 120000) * 0.37
-       + (income - 180000) * 0.45;
- }
-
- return tax;
-}
-
-/* ---------- Financial Year ---------- */
-function getFinancialYear(){
- const d = new Date();
- const y = d.getFullYear();
- return d.getMonth() >= 6 ? `${y}-${y+1}` : `${y-1}-${y}`;
-}
-
-let currentFY = getFinancialYear();
+const BASE = 18200;
+const MAX_RANGE = 50000;
 const STORAGE_KEY = "taxTrackerFY";
+
+/* ---------- Financial Year helpers ---------- */
+function fyString(start) {
+    return `${start}-${start + 1}`;
+}
+
+function getCurrentFYStart() {
+    const d = new Date();
+    return d.getMonth() >= 6 ? d.getFullYear() : d.getFullYear() - 1;
+}
+
+/* ---------- State ---------- */
+let currentFYStart = getCurrentFYStart();
 let store = JSON.parse(localStorage.getItem(STORAGE_KEY)) || {};
+let incomes = [];
+let deductions = [];
 
-if(!store[currentFY]) store[currentFY] = { incomes:[], deductions:[] };
+/* ---------- DOM ---------- */
+const fyLabel = document.getElementById("fyLabel");
+const nextArrow = document.getElementById("nextArrow");
+const incomeDisplay = document.getElementById("incomeDisplay");
+const barFill = document.getElementById("barFill");
+const amountInput = document.getElementById("amountInput");
+const descInput = document.getElementById("descInput");
+const incomePreview = document.getElementById("incomePreview");
+const deductionPreview = document.getElementById("deductionPreview");
 
-let incomes = store[currentFY].incomes;
-let deductions = store[currentFY].deductions;
+/* ---------- Core ---------- */
+function loadFY() {
+    const fy = fyString(currentFYStart);
+    store[fy] ||= { incomes: [], deductions: [] };
 
-function save(){
- store[currentFY] = { incomes, deductions };
- localStorage.setItem(STORAGE_KEY, JSON.stringify(store));
+    // keep only current + previous FY
+    const keys = Object.keys(store).sort();
+    while (keys.length > 2) delete store[keys.shift()];
+
+    incomes = store[fy].incomes;
+    deductions = store[fy].deductions;
+
+    fyLabel.textContent = `Financial Year: ${fy}`;
+    nextArrow.classList.toggle(
+        "disabled",
+        currentFYStart >= getCurrentFYStart()
+    );
+
+    updateUI();
 }
 
-function setFYLabel(){
- document.getElementById("fyText").textContent =
-   `Financial Year: ${currentFY}`;
+function save() {
+    store[fyString(currentFYStart)] = { incomes, deductions };
+    localStorage.setItem(STORAGE_KEY, JSON.stringify(store));
 }
 
-/* ---------- Totals ---------- */
-function totals(){
- return {
-   gross: incomes.reduce((a,b)=>a+b.amount,0),
-   ded: deductions.reduce((a,b)=>a+b.amount,0)
- };
+function calculateTotal() {
+    const inc = incomes.reduce((a, b) => a + b.amount, 0);
+    const ded = deductions.reduce((a, b) => a + b.amount, 0);
+    return Math.max(0, inc - ded);
 }
 
-function updateUI(){
- const {gross,ded} = totals();
- const net = gross - ded;
- const taxable = Math.max(net,0);
- const tax = calculateTax(taxable);
+function updateUI() {
+    const total = calculateTotal();
+    incomeDisplay.textContent = `$${total.toLocaleString()}`;
 
- document.getElementById("incomeDisplay").textContent =
-   `$${net.toLocaleString()}`;
+    const taxable = Math.max(total - BASE, 0);
+    barFill.style.width =
+        Math.min((taxable / MAX_RANGE) * 100, 100) + "%";
 
- document.getElementById("taxEstimate").textContent =
-   tax > 0
-     ? `$${tax.toLocaleString(undefined,{minimumFractionDigits:2,maximumFractionDigits:2})} tax estimate`
-     : "";
+    incomePreview.innerHTML = incomes
+        .slice(-3)
+        .reverse()
+        .map(renderItem)
+        .join("");
 
- document.getElementById("barFill").style.width =
-   Math.min((taxable/50000)*100,100) + "%";
+    deductionPreview.innerHTML = deductions
+        .slice(-3)
+        .reverse()
+        .map(renderItem)
+        .join("");
 
- renderPreviews();
- renderLogs();
- save();
+    save();
 }
 
 /* ---------- Rendering ---------- */
-function renderPreviews(){
- document.getElementById("incomePreview").innerHTML =
-   incomes.slice(-3).reverse().map(renderItem).join("");
-
- document.getElementById("deductionPreview").innerHTML =
-   deductions.slice(-3).reverse().map(renderItem).join("");
-}
-
-function renderLogs(){
- document.getElementById("incomeLog").innerHTML =
-   incomes.map((i,idx)=>renderItemWithDelete("income")(i,idx)).reverse().join("");
-
- document.getElementById("deductionLog").innerHTML =
-   deductions.map((i,idx)=>renderItemWithDelete("deduction")(i,idx)).reverse().join("");
-}
-
-function renderItem(item){
- return `<div class="log-item">
-   <div class="log-top">
-     <span>$${item.amount.toLocaleString()}</span>
-   </div>
-   <div class="desc">${item.desc || "—"}</div>
- </div>`;
-}
-
-function renderItemWithDelete(type){
- return (item,i)=>`
- <div class="log-item">
-   <div class="log-top">
-     <span>${type==="income"?"$":"-$"}${item.amount.toLocaleString()}</span>
-     <span class="delete" onclick="deleteEntry('${type}',${i})">✕</span>
-   </div>
-   <div class="desc">${item.desc || "—"}</div>
- </div>`;
+function renderItem(item) {
+    return `
+    <div class="log-item">
+        <div class="log-top">
+            <span>$${item.amount.toLocaleString()}</span>
+        </div>
+        <div class="desc">${item.desc || "—"}</div>
+    </div>`;
 }
 
 /* ---------- Actions ---------- */
-function addIncome(){
- const amount = Number(document.getElementById("amountInput").value);
- if(!amount) return;
- incomes.push({amount,desc:document.getElementById("descInput").value});
- clearInputs();
- updateUI();
+function addIncome() {
+    const amount = Number(amountInput.value);
+    if (!amount) return;
+    incomes.push({ amount, desc: descInput.value, time: Date.now() });
+    clearInputs();
+    updateUI();
 }
 
-function addDeduction(){
- const amount = Number(document.getElementById("amountInput").value);
- if(!amount) return;
- deductions.push({amount,desc:document.getElementById("descInput").value});
- clearInputs();
- updateUI();
+function addDeduction() {
+    const amount = Number(amountInput.value);
+    if (!amount) return;
+    deductions.push({ amount, desc: descInput.value, time: Date.now() });
+    clearInputs();
+    updateUI();
 }
 
-function deleteEntry(type,index){
- type==="income"
-   ? incomes.splice(index,1)
-   : deductions.splice(index,1);
- updateUI();
+function clearInputs() {
+    amountInput.value = "";
+    descInput.value = "";
 }
 
-function clearInputs(){
- document.getElementById("amountInput").value="";
- document.getElementById("descInput").value="";
+/* ---------- FY navigation ---------- */
+function prevFY() {
+    currentFYStart--;
+    loadFY();
 }
 
-/* ---------- Navigation ---------- */
-function toggle(id){
- document.querySelectorAll("[id^='screen']")
-   .forEach(s=>s.classList.add("hidden"));
- document.getElementById(id).classList.remove("hidden");
-}
-
-function showMain(){toggle("screen-main");}
-function showIncome(){toggle("screen-income");}
-function showDeductions(){toggle("screen-deduction");}
-
-function changeFY(direction){
- const [start] = currentFY.split("-").map(Number);
- const next = start + direction;
- currentFY = `${next}-${next+1}`;
-
- if(!store[currentFY])
-   store[currentFY] = { incomes:[], deductions:[] };
-
- incomes = store[currentFY].incomes;
- deductions = store[currentFY].deductions;
-
- setFYLabel();
- updateUI();
-}
-
-function resetFY(){
- incomes.length = 0;
- deductions.length = 0;
- updateUI();
+function nextFY() {
+    if (currentFYStart < getCurrentFYStart()) {
+        currentFYStart++;
+        loadFY();
+    }
 }
 
 /* ---------- Init ---------- */
-setFYLabel();
-updateUI();
-
+loadFY();
 </script>
+
 </body>
 </html>
